Add grants audit logs (#8884)
    * Finish Auditlog support for EntitySharesResource

    * register SecurityAuditEventTypes

    * add license

    * fix AuditCoverageTest

    * Send entity sharing auditlogs from EntitySharesService

    This allows us to create more detailed auditlog messages,
    than just dumping the entire sharing request.

    * Provide audit context as JsonNode

    Traversing into nested maps on JsonNodes is more convenient

    Fixes #8450